--- a/ref.bib
+++ b/ref.bib
@@ -833,3 +833,54 @@ ADS Bibcode: 1959cbs..book.....K},
 	langid = {english},
 	note = {Publisher: The American Astronomical Society}
 }
+
+
+@article{poro_investigation_of_orbital_period_mass_relations_2022,
+	title = {Investigation of the Orbital Period and Mass Relations for W {UMa}-type Contact Systems},
+	volume = {510},
+	issn = {0035-8711, 1365-2966},
+	url = {http://arxiv.org/abs/2112.13276},
+	doi = {10.1093/mnras/stab3775},
+	abstract = {New relationships between the orbital period and some parameters of W Ursae Majoris (W {UMa}) type systems are presented in this study. To investigate the relationships, we calculated the absolute parameters of a sample of 118 systems. For this purpose, we used the parallax values obtained from the Gaia Early Data Release 3 (Gaia {EDR}3) star catalog for more precise calculations. The other required parameters, including the light curve solutions and the orbital period were derived from previous research. For some relationships, we added 86 systems from another study with an orbital period of less than 0.6 days to our sample, allowing us to increase the number of systems to 204. Therefore, the mass (M) values of each component along with all the other absolute parameters were recalculated for these contact systems. We used the Markov Chain Monte Carlo ({MCMC}) approach in order to gain the new orbital period-mass relations (P-M) per component, and added the temperature (T) to the process to acquire the new orbital period-temperature (P-T1) relation. We presented the orbital period behavior in terms of log(g) by new relations for each component. We have also obtained a model between the orbital period, the mass of the primary component and temperature (P-M1-T1) using the Artificial Neural Networks ({ANN}) method. Additionally, we present a model for the relationship between the orbital period and the mass ratio (P-q) by fitting a Multi-Layer Perceptron ({MLP}) regression model to a sample of the data collected from the literature.},
+	pages = {5315--5329},
+	number = {4},
+	journaltitle = {Monthly Notices of the Royal Astronomical Society},
+	author = {Poro, Atila and Sarabi, Soroush and Zamanpour, Shiva and Fotouhi, Saba and Davoudi, Fatemeh and Khakpash, Somayeh and Salehian, Selda Ranjbar and Madayen, Tabassom and Foroutanfar, Atieh and Bakhshi, Elnaz and Mahdavi, Negar Sadat and Alicavus, Fahri and Farahani, Ahmad Mazidabadi and Sabbaghian, Golshan and Hosseini, Raziye Sadat and Aryaeefar, Amirali and Hemati, Maryam},
+	urldate = {2024-07-23},
+	date = {2022-01-21},
+	eprinttype = {arxiv},
+	eprint = {2112.13276 [astro-ph]},
+	keywords = {Astrophysics - Solar and Stellar Astrophysics}
+}
+
+@article{oconnell_periastron_effect-OConnell_effect_1951,
+	title = {The so-called periastron effect in close eclipsing binaries},
+	volume = {2},
+	url = {https://ui.adsabs.harvard.edu/abs/1951PRCO....2...85O},
+	pages = {85--100},
+	journaltitle = {Publications of the Riverview College Observatory},
+	author = {O'Connell, D. J. K.},
+	urldate = {2024-07-29},
+	date = {1951-08-01},
+	note = {{ADS} Bibcode: 1951PRCO....2...85O}
+}
+
+@article{darwish_light_curve_analysis_four_new_short_period_eclipsing_binaries_2024,
+	title = {Light curve analysis and evolutionary status of four newly identified short-period eclipsing binaries},
+	volume = {14},
+	rights = {2024 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-024-54289-1},
+	doi = {10.1038/s41598-024-54289-1},
+	abstract = {We present the physical and orbital parameters of four short-period eclipsing W {UMa} systems: \$\${ZTFJ}000030.44 +391106.9\$\$(referred to as S1), \$\${ZTFJ}000817.08+402532.1\$\$(referred to as S2), \$\${ZTFJ}002158.44+252934.04\$\$(referred to as S3), and \$\${ZTFJ}003357.62+415747.8\$\$(referred to as S4). The absolute parameters and evolutionary status of these systems are determined, and new times of minima are calculated. Additionally, we present the 3D fill-out configuration for each system. The four Systems exhibit moderate contact W {UMa} binary with a fill-out factor of 49\%, 38\%, 28\%, and 51\%, respectively. Comparing the systems’ periods, we observed a proportional relationship, where shorter periods correspond to lower fill-out factors, and longer periods were associated with higher fill-out factors. Based on the derived surface temperatures and mass ratios of the components, all systems are classified as A-type W {UMa} binaries. The obtained parameters in addition to a list of previously published data are then utilized to derive an updated Mass-Luminosity relation (M-L) for both A and W-type eclipsing W {UMa} systems. A comparison with previously published relations reveals that the majority of the {EW} systems lie between 0.2 and 2 Msun on the M-L diagram. Moreover, we discuss the dynamical evolutionary aspects and evolutionary status of the four components, along with their positions on the Zero Age Main Sequence ({ZAMS}) and Terminal Age Main Sequence ({TAMS}).},
+	pages = {3998},
+	number = {1},
+	journaltitle = {Scientific Reports},
+	shortjournal = {Sci Rep},
+	author = {Darwish, Mohamed S. and Abdelkawy, Ali G. A. and Hamed, Gamal M.},
+	urldate = {2024-07-30},
+	date = {2024-02-18},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Astronomy and astrophysics, Space physics}
+}
